--- a/index.html
+++ b/index.html
@@ -7,6 +7,213 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>ЦВЕТОЛИК</h1>
+    <section class="section1">
+        <div class="block1">
+            <div class="block1_text">
+                <h1>ЦВЕТОЛИК</h1>
+                <h2>модельное агентство для цветов</h2>
+            </div>
+            <div class="block1_img_main_flower">
+                <img src="img/цветок главный.svg" alt="pic">
+            </div>
+        </div>
+
+        <div class="block1_img_lepestki">
+            <img style="width: 100%;" src="img/Group 161.svg" alt="pic">
+        </div>
+
+        <div class="block1_message">
+            «ЦВЕТОЛИК» — единственное в мире модельное агентство для цветов, где каждое растение вне зависимости от своего вида и сорта может принять участие в настоящих показах
+            </div>
+        </div>
+
+    </section>
+
+    <section class="section2">
+        <h3>НАШИ ПРИЕМУЩЕСТВА</h3>
+
+        <div class="block2">
+            <div class="block2_title">
+                <h4>ТОЛЕРАНТНОСТЬ</h4>  
+            </div>
+            <div class="block2_text">
+            Мы — международная компания, поэтому любой цветок вне зависимости от совего происхождения, вида или сорта может принять участия в показах и стать частью нашей команды.
+            </div>
+            <img class="block2_img block2_img_1" src="img/Group 22.svg">
+        </div>
+
+        <img class="block2_separator" src="img/Vector 695.svg" alt="pic">
+        
+        <div class="block2">
+            <div class="block2_title">
+                <h4>КАЧЕСТВО СЕРВИСА</h4>  
+            </div>
+            <div class="block2_text">
+            В отличие от обычных агентств, где модели нередко превращаются в обезличенные «экспонаты», наша организация бережно относится к каждому цветку. Мы учитываем его потребности: освещённость, температуру, влагу и даже настроение.   
+            </div>           
+            <img class="block2_img block2_img_2" src="img/Group 24.svg">          
+        </div>
+
+        <img class="block2_separator" src="img/Vector 695.svg" alt="pic">
+
+        <div class="block2">
+            <div class="block2_title">
+                <h4>УНИКАЛЬНОСТЬ</h4>  
+            </div>
+            <div class="block2_text">
+                ЦВЕТОЛИКИЕ — первое и единственное в мире модельное агентство, в котором в роли модели выступают настоящие цветы, а сотрудниками явялются заботливые и внимательные феи.
+            </div>
+            <img class="block2_img block2_img_3" src="img/Group 23.svg">        
+        </div>        
+    </section>
+
+    <section class="section3">
+        <h3>ГЛАВНЫЕ СОБЫТИЯ</h3>
+        <div class="block3">
+        <div class="block3_box">
+            <img src="img/Rectangle 329.svg">
+            <div class="block3_content"> 
+                <h4>        
+                Отчетные показы
+                </h4> 
+                <div class="block3_text">
+                    Раз в год модельное агентство «Цветолик» проводит отчётный показ. На них, может прийти любой желающий, гости смогут не только увидеть цветочный подиум, но и пообщаться с феями-организаторами.
+                </div>
+                 <div class="block3_img1">
+               <img src="img/Group 20.svg">
+               </div>
+            </div>
+        </div>  
+
+        <div class="block3_box">
+            <img src="img/Rectangle 329.svg">
+            <div class="block3_content">
+                <h4>
+                Кастинги
+                </h4>
+                <div class="block3_text">
+                    Кастинги проводятся раз в полгода, для того, чтобы принять в них участие, цветам необходимо заполнить анкету и прийти в назначенное время в наш офис. Здесь важны не только внешность и аромат, но и характер: даже скромный полевой одуванчик может стать настоящей звездой.
+                </div>
+                <div class="block3_img2">
+                    <img src="img/Group 162.svg">
+                </div>
+            </div>
+        </div>
+
+        </div>
+    </section>
+
+<section class="section4">
+    <h3>ИСТОРИЯ СОЗДАНИЯ </h3>
+    <div class="history_timeline">
+        <div class="history_timeline_items">
+            <div class="history_timeline_year">2007</div>
+            <img src="img/Rectangle 319.png" alt="2007">
+            <div class="history_timeline_box_text">Феи организовывают первый тайный лесной показ мод,в котором принимают участие более 20 видов цветов</div>
+        </div>
+        <div class="history_timeline_items">
+            <div class="history_timeline_year">2017</div>
+            <img src="img/Rectangle 319.png" alt="2017">
+            <div class="history_timeline_box_text">Феи создают первый филиал будущего модельного агентства, состоящий из веток и мха</div>
+        </div>
+        <div class="history_timeline_items">
+            <div class="history_timeline_year">2025</div>
+            <img src="img/Rectangle 319.png" alt="2025">
+            <div class="history_timeline_box_text">Агентство достигает невероятных высот, открывает множество новых филиалов в лесах со всего мира</div>
+        </div>
+    </div>
+    <img src="img/Group 165.svg" class="history_timeline_img">
+</section>
+
+<section class="section5">
+    <h3>НАШ МЕРЧ</h3>
+    <div class="first_photo_line">
+        <div class="first_photo_line_items">
+            <img src="img/ваза2psd  копия 3.svg" alt="ваза «Цветолик»" class="first_photo_line_img">
+            <p class="first_photo_line_text">ваза «Цветолик»</p>
+         </div>
+         <div class="first_photo_line_items">
+            <img src="img/набор итог копия 3.svg" alt="офисный набор «Цветолик»" class="first_photo_line_img">
+            <p class="first_photo_line_text">офисный набор «Цветолик»</p>
+        </div>
+        <div class="first_photo_line_items">
+            <img src="img/билеты копия 3.svg" alt="билеты на показ мод" class="first_photo_line_img">
+            <p class="first_photo_line_text">билеты на показ мод</p>
+        </div>       
+    </div>
+
+
+
+    <div class="second_photo_line">
+        <div class="second_photo_line_items">
+            <img src="img/помада копия 3.svg" alt="помада «Цветолик»" class="second_photo_line_img">
+            <p class="second_photo_line_text">помада «Цветолик»</p>
+        </div>      
+        
+        <div class="second_photo_line_items">
+            <img src="img/карта пропуск 2 копия 2.svg" alt="пропуск для сотрудников" class="second_photo_line_img">
+            <p class="second_photo_line_text">пропуск для сотрудников</p>
+        </div>
+    </div>
+</section>
+
+<section class="section6">
+    <h3>СОТРУДНИКИ</h3>
+    <div class="fairy">
+        <div class="fairy_items">
+            <img src="img/Group 167.svg" alt="фея-организатор" class="fairy_img">
+            <img src="img/Rectangle 351.svg">
+            <div class="fairy_text">фея-организатор</div>           
+        </div>
+        <div class="fairy_items">
+            <img src="img/Group 168.svg" alt="фея-визажист" class="fairy_img">
+            <img src="img/Rectangle 351.svg">
+            <div class="fairy_text">фея-визажист</div>             
+        </div>
+        <div class="fairy_items">
+            <img src="img/Group 169.svg" alt="фея-фотограф" class="fairy_img">
+            <img src="img/Rectangle 351.svg">
+            <div class="fairy_text">фея-фотограф</div> 
+        </div>
+
+    </div>
+
+</section>
+
+<section class="section7">
+    <h3>ЛОЗУНГ</h3>
+    <div class="mission">
+        <div class="mission_img"><img src="img/Group 170.svg"></div>
+        <div class="mission_text">«Мы работаем не с цветами, а для цветов»</div>
+        <div class="mission_img"><img src="img/Group 171.svg"></div>
+    </div>
+
+</section>
+
+<section class="section8">
+    <div class="footer_background">
+        <img src="img/Rectangle 350.svg">
+    </div>
+    <div class="footer_text">
+        <div class="footer_text1">
+            <div class="text_1">Автор:</div>
+            <div class="text_2">К.Завгородняя</div>
+            <div class="text_3">Б25УКИ02</div>
+        </div>
+        <div class="footer_text2">
+            <div class="text_4">Кураторы:</div>
+            <div class="text_5">Аракелян Нона</div>
+            <div class="text_6">Латышев Артем</div>
+            <div class="text_7">Рихтер Камила</div>
+        </div>
+        <div class="footer_text3"><img src="img/Group 116.svg"></div>
+    </div>
+</section>
+
+   
+
 </body>
 </html>
+
+
+
