--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h2>модельное агентство для цветов</h2>
             </div>
             <div class="block1_img_main_flower">
-                <img src="img/цветок главный.svg" alt="pic">
+                <img src="img/Group 21.svg" alt="pic">
             </div>
         </div>
 
